--- a/core/src/main/res/values/strings.xml
+++ b/core/src/main/res/values/strings.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="server_error">Server is not responding. Try again later.</string>
-    <string name="server_error__message_400">Bad request (invalid request argument)</string>
-    <string name="server_error__message_401">Unauthenticated</string>
-    <string name="server_error__message_403">Forbidden</string>
+    <string name="server_error__message_400">Bad request - invalid request argument.</string>
+    <string name="server_error__message_401">Unauthenticated.</string>
+    <string name="server_error__message_403">Forbidden.</string>
     <string name="server_error__message_404">Product not found. Try again later.</string>
     <string name="server_error__message_500">Internal error.</string>
     <string name="server_error__message_503">Service unavailable. Try again later.</string>
@@ -18,6 +18,7 @@
     <string name="auth_error">Authorization problem.</string>
     <string name="permission_error">You do not have sufficient permissions to perform this action.</string>
     <string name="unknown_error">An unexpected error has occurred.</string>
+
     <string name="product_realtime_title">Google Inc. - Class C Capital Stock</string>
     <string name="product_realtime_currency">$</string>
     <string name="product_realtime_price">894</string>
