refactor/feat(ui): viewmodels and fragments amends, currency object, data binding for the final screens

--- a/navigation/src/main/res/values/strings.xml
+++ b/navigation/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="list_fragment_label">Product List</string>
+    <string name="list_fragment_label">Trading products</string>
     <string name="product_fragment_label">Trading Product</string>
 </resources>
